apps/base/monitoring-node-exporter/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-exporter
  labels:
    prometheus-target: node-exporter
spec:
  clusterIP: None
  ports:
  - name: https
    port: 9100
    targetPort: https
  selector:
    app.kubernetes.io/component: node-exporter
    app.kubernetes.io/name: node-exporter
