apps/base/monitoring-node-exporter/deploy/networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-node-exporter
spec:
  policyTypes: [Ingress]

  podSelector:
    matchLabels:
      app.kubernetes.io/name: node-exporter
      app.kubernetes.io/component: node-exporter

#  # node-exporter runs with `hostNetwork: true`, so NetworkPolicies don't apply
#  ingress:
#    # Allow from prometheus
#    - ports:
#        - port: https
#      from:
#        - namespaceSelector:
#            matchLabels:
#              kubernetes.io/metadata.name: monitoring-prometheus
#          podSelector:
#            matchLabels:
#              app.kubernetes.io/component: prometheus
#              app.kubernetes.io/instance: k8s
#              app.kubernetes.io/name: prometheus
